--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,49 +1,3 @@
-[package]
-name = "eddist"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-anyhow = "1.0.86"
-async-trait = "0.1.80"
-axum = "0.7.5"
-axum-extra = { version = "0.9.3", features = ["cookie"] }
-base64 = "0.22.1"
-brotli = "6.0.0"
-chrono = { version = "0.4.38", features = ["serde"] }
-dotenvy = "0.15.7"
-encoding_rs = "0.8.34"
-env_logger = "0.11.3"
-hyper = "1.4.0"
-hyper-util = "0.1.6"
-jsonwebtoken = "9.3.0"
-log = "0.4.22"
-md-5 = "0.10.6"
-mockall = "0.12.1"
-pwhash = "1.0.0"
-rand = "0.8.5"
-redis = { version = "0.25.4", features = ["tokio-comp"] }
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.118"
-sqlx = { version = "0.7.4", default-features = false, features = [
-    "runtime-tokio",
-    "tls-rustls",
-    "mysql",
-    "macros",
-    "chrono",
-] }
-thiserror = "1.0.61"
-time = "0.3.36"
-tokio = { version = "1.38.0", features = ["full"] }
-tokio-util = "0.7.11"
-tower-http = { version = "0.5.2", features = [
-    "compression-br",
-    "compression-gzip",
-    "trace",
-    "timeout",
-] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-uuid = { version = "1.9.1", features = ["v4", "v7"] }
+[workspace]
+members = ["eddist-server"]
+resolver = "2"
