--- a/docker-prod/Dockerfile
+++ b/docker-prod/Dockerfile
@@ -8,6 +8,9 @@ RUN cargo b --release
 
 FROM debian:bookworm-slim
 
+ENV RUST_ENV=prod
+ENV RUST_LOG=info
+
 COPY --from=0 /eddist-build/target/release/eddist .
 EXPOSE 8080
 
