--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build
-        run: cargo build --release
+        run: ls && cargo build --release && ls && find . -maxdepth 2
 
       - name: Login to Docker registry
         uses: docker/login-action@v1
