--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,9 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build
-        run: ls && cargo build --release && ls && find . -maxdepth 2
-
+        run: cargo build --release
+      - name: rm .dockerignore
+        run: rm .dockerignore
       - name: Login to Docker registry
         uses: docker/login-action@v1
         with:
