--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
 [workspace]
-members = ["eddist-server"]
+members = ["eddist-admin", "eddist-core", "eddist-server"]
 resolver = "2"
+default-members = ["eddist-server"]
