--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-eddist:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Setup Rust
         uses: hecrj/setup-rust-action@v2
       - name: Load cache
@@ -26,21 +26,21 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build
-        run: cargo build --release
+        run: cargo build --package eddist --release
       - name: rm .dockerignore
         run: rm .dockerignore
       - name: Login to Docker registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: .
-          file: docker-prod/Dockerfile
+          file: docker-prod/eddist/Dockerfile
           push: true
           tags: |
             ghcr.io/edginer/eddist:${{ github.sha }}
@@ -52,3 +52,54 @@ jobs:
           repository: ${{ secrets.DEPLOY_REPO_URL }}
           event-type: update-image
           client-payload: '{"image-tag": "${{ github.sha }}"}'
+  build-eddist-admin:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          run_install: false
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+      - name: Load cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Build eddist-admin-client
+        working-directory: eddist-admin/client
+        run: pnpm build
+      - name: Build eddist-admin-server
+        run: cargo build --package eddist-admin --release
+      - name: rm .dockerignore
+        run: rm .dockerignore
+      - name: Login to Docker registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: docker-prod/eddist-admin/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/edginer/eddist-admin:${{ github.sha }}
+            ghcr.io/edginer/eddist-admin:latest
