--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -22,7 +22,7 @@ sqlx = { version = "0.8.0", default-features = false, features = [
     "macros",
 ] }
 tokio = { version = "1.39.2", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["trace"] }
+tower-http = { version = "0.5.2", features = ["fs", "trace"] }
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["v7", "v4"] }
