--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
         with:
           node-version: "20"
           cache: "pnpm"
+          cache-dependency-path: "eddist-admin/client/pnpm-lock.yaml"
       - name: Load cache
         uses: actions/cache@v2
         with:
