--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-admin-${{ hashFiles('**/Cargo.lock') }}
       - name: Build eddist-admin-client
         working-directory: eddist-admin/client
         run: pnpm build
