--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -14,6 +14,7 @@ dotenvy = "0.15.7"
 juniper = "0.16.1"
 juniper_axum = "0.1.0"
 log = "0.4.22"
+tower-sessions = "0.12.2"
 sqlx = { version = "0.8.0", default-features = false, features = [
     "runtime-tokio",
     "tls-rustls",
@@ -26,3 +27,9 @@ tower-http = { version = "0.5.2", features = ["fs", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["v7", "v4"] }
+oauth2 = "4.4.2"
+time = "0.3.36"
+serde = { version = "1.0.205", features = ["derive"] }
+serde_json = "1.0.122"
+jsonwebtoken = "9.3.0"
+base64 = "0.22.1"
