--- a/eddist-admin/client/package.json
+++ b/eddist-admin/client/package.json
@@ -10,7 +10,6 @@
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^6.20.4",
-    "@react-keycloak/web": "^3.4.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
@@ -23,11 +22,11 @@
     "graphql": "^15.5.3",
     "graphql-request": "^5.2.0",
     "graphql-tag": "^2.12.6",
-    "keycloak-js": "^20.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
