--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -26,13 +26,14 @@ pwhash = "1.0.0"
 rand = "0.8.5"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.118"
+serde_json = { version = "1.0.118" }
 sqlx = { version = "0.8.0", default-features = false, features = [
     "runtime-tokio",
     "tls-rustls",
     "mysql",
     "macros",
     "chrono",
+    "json",
 ] }
 thiserror = "1.0.61"
 time = "0.3.36"
@@ -47,3 +48,5 @@ tower-http = { version = "0.5.2", features = [
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
+
+eddist-core = { path = "../eddist-core" }
