--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -56,3 +56,4 @@ reqwest = { version = "0.12.5", default-features = false, features = [
 ] }
 
 eddist-core = { path = "../eddist-core" }
+sha3 = "0.10.8"
