--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -34,6 +34,7 @@ sqlx = { version = "0.8.0", default-features = false, features = [
     "macros",
     "chrono",
     "json",
+    "uuid",
 ] }
 thiserror = "1.0.61"
 time = "0.3.36"
