--- a/eddist-core/Cargo.toml
+++ b/eddist-core/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.205", features = ["derive"] }
 chrono = "0.4.38"
+# TODO: Remove this dependency and replace it with trait
+redis = { version = "0.25.4", features = ["tokio-comp"] }
+anyhow = "1.0.86"
+serde_json = { version = "1.0.118" }
