--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,3 +110,42 @@ jobs:
           tags: |
             ghcr.io/edginer/eddist-admin:${{ github.sha }}
             ghcr.io/edginer/eddist-admin:latest
+  build-eddist-cron:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
+      - name: Load cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-cron-${{ hashFiles('**/Cargo.lock') }}
+      - name: Build
+        run: cargo build --package eddist-cron --release
+      - name: rm .dockerignore
+        run: rm .dockerignore
+      - name: Login to Docker registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: docker-prod/eddist-cron/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/edginer/eddist-cron:${{ github.sha }}
+            ghcr.io/edginer/eddist-cron:latest
