--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -21,6 +21,7 @@ sqlx = { version = "0.8.0", default-features = false, features = [
     "mysql",
     "chrono",
     "macros",
+    "json",
 ] }
 tokio = { version = "1.39.2", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["fs", "trace"] }
