--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -29,6 +29,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["v7", "v4"] }
 oauth2 = "4.4.2"
+reqwest = "0.11"
 time = "0.3.36"
 serde = { version = "1.0.205", features = ["derive"] }
 serde_json = { version = "1.0.122" }
