--- a/.github/workflows/image-retention-policy.yml
+++ b/.github/workflows/image-retention-policy.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   clean:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     name: Delete old test images
     steps:
       - name: Delete old images (eddist)
