--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -58,3 +58,4 @@ reqwest = { version = "0.12.5", default-features = false, features = [
 
 eddist-core = { path = "../eddist-core" }
 sha3 = "0.10.8"
+jwt-simple = "0.12.9"
