Add simple web client for eddist

--- a/.github/workflows/image-retention-policy.yml
+++ b/.github/workflows/image-retention-policy.yml
@@ -3,7 +3,7 @@ name: Image retention policy
 on:
   workflow_dispatch:
   schedule:
-    - cron: "5 * * * *" # every hour
+    - cron: "0 1 * * *" # every hour
 
 jobs:
   clean:
