Fix to include static file and ci

--- a/docker-prod/eddist/Dockerfile
+++ b/docker-prod/eddist/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:bookworm-slim
 
 COPY ./target/release/eddist .
+COPY ./eddist-server/client/dist ./dist
 
 ENV RUST_ENV=prod
 ENV RUST_LOG=info
