--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           cache: "pnpm"
           cache-dependency-path: |
             "pnpm-lock.yaml"
-            "eddist/client/pnpm-lock.yaml"
+            "eddist-server/client/pnpm-lock.yaml"
             "eddist-admin/client/pnpm-lock.yaml"
       - name: Install pnpm dependencies
         run: pnpm install
