--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,9 @@ jobs:
           node-version: "20"
           cache: "pnpm"
           cache-dependency-path: |
-            "pnpm-lock.yaml"
-            "eddist-server/client/pnpm-lock.yaml"
-            "eddist-admin/client/pnpm-lock.yaml"
+            pnpm-lock.yaml
+            eddist-server/client/pnpm-lock.yaml
+            eddist-admin/client/pnpm-lock.yaml
       - name: Install pnpm dependencies
         run: pnpm install
       - name: Build eddist-client
