--- a/eddist-core/Cargo.toml
+++ b/eddist-core/Cargo.toml
@@ -11,3 +11,4 @@ redis = { version = "0.25.4", features = ["tokio-comp"] }
 anyhow = "1.0.86"
 serde_json = { version = "1.0.118" }
 uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
+encoding_rs = "0.8.34"
