--- a/eddist-cron/Cargo.toml
+++ b/eddist-cron/Cargo.toml
@@ -19,3 +19,10 @@ cron = "0.12.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 
 eddist-core = { path = "../eddist-core" }
+rust-s3 = { version = "0.35.1", default-features = false, features = [
+    "tokio-rustls-tls",
+    "tags",
+    "fail-on-err",
+] }
+uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
+dotenvy = "0.15.7"
