--- a/eddist-admin/client/package.json
+++ b/eddist-admin/client/package.json
@@ -1,52 +1,49 @@
 {
   "name": "eddist-admin-client",
-  "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "type": "module",
+  "scripts": {
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
+  },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.3",
-    "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.8.6",
-    "@mui/x-data-grid": "^6.20.4",
-    "@refinedev/cli": "^2.16.21",
-    "@refinedev/core": "^4.47.1",
-    "@refinedev/devtools": "^1.1.32",
-    "@refinedev/graphql": "^6.4.8",
-    "@refinedev/kbar": "^1.3.6",
-    "@refinedev/mui": "^5.14.4",
-    "@refinedev/react-hook-form": "^4.8.14",
-    "@refinedev/react-router-v6": "^4.5.5",
-    "axios": "^1.6.2",
+    "@apollo/client": "^3.11.8",
+    "@hookform/resolvers": "^3.9.0",
+    "@remix-run/node": "^2.11.2",
+    "@remix-run/react": "^2.11.2",
+    "@remix-run/serve": "^2.11.2",
+    "@tanstack/react-query": "^5.52.2",
+    "clsx": "^2.1.1",
+    "flowbite-react": "^0.10.1",
     "graphql": "^15.5.3",
-    "graphql-request": "^5.2.0",
     "graphql-tag": "^2.12.6",
-    "recoil": "^0.7.7"
+    "isbot": "^4.1.0",
+    "openapi-fetch": "^0.12.0",
+    "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.1"
+    "@remix-run/dev": "^2.11.2",
+    "autoprefixer": "^10.4.19",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "openapi-typescript": "^7.4.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
-  "scripts": {
-    "dev": "refine dev",
-    "build": "tsc && refine build",
-    "start": "refine start",
-    "refine": "refine"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "refine": {
-    "projectId": "ahO5GS-09bDp3-INFSfL"
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
