--- a/eddist-cron/Cargo.toml
+++ b/eddist-cron/Cargo.toml
@@ -26,3 +26,4 @@ rust-s3 = { version = "0.35.1", default-features = false, features = [
 ] }
 uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
 dotenvy = "0.15.7"
+redis = { version = "0.25.4", features = ["tokio-comp"] }
