--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "codegen": "gql-gen --config codegen.yml"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-codegen/introspection": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@graphql-codegen/cli": "^5.0.2",
     "@types/node": "^18.16.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -25,6 +28,8 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "graphql-codegen-typescript-client": "0.18.2",
+    "graphql-codegen-typescript-react-apollo": "0.18.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
   }
