--- a/.github/workflows/image-retention-policy.yml
+++ b/.github/workflows/image-retention-policy.yml
@@ -39,3 +39,12 @@ jobs:
           image-tags: "!v*"
           cut-off: 1d
           keep-n-most-recent: 3
+      - name: Delete old images (eddist-persistence)
+        uses: snok/container-retention-policy@v3.0.0
+        with:
+          account: user
+          token: ${{ secrets.GITHUB_TOKEN }}
+          image-names: "eddist-persistence"
+          image-tags: "!v*"
+          cut-off: 1d
+          keep-n-most-recent: 3
