--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -24,7 +24,7 @@ md-5 = "0.10.6"
 mockall = "0.12.1"
 pwhash = "1.0.0"
 rand = "0.8.5"
-redis = { version = "0.25.4", features = ["tokio-comp"] }
+redis = { version = "0.25.4", features = ["tokio-comp", "connection-manager"] }
 serde = { version = "1.0.205", features = ["derive"] }
 serde_json = { version = "1.0.118" }
 sqlx = { version = "0.8.0", default-features = false, features = [
@@ -60,3 +60,4 @@ reqwest = { version = "0.12.5", default-features = false, features = [
 eddist-core = { path = "../eddist-core" }
 sha3 = "0.10.8"
 jwt-simple = "0.12.9"
+futures = "0.3.30"
