--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -62,3 +62,6 @@ sha3 = "0.10.8"
 jwt-simple = "0.12.9"
 futures = "0.3.30"
 handlebars = "6.1.0"
+metrics = "0.23.0"
+metrics-exporter-prometheus = "0.15.3"
+axum-prometheus = "0.7.0"
