--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -27,6 +27,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["v7", "v4"] }
 oauth2 = "4.4.2"
 reqwest = { version = "0.11", default-features = false, features = [
+    "json",
     "rustls-tls",
 ] }
 time = "0.3.36"
