to verbose backtrace

--- a/docker-prod/eddist/Dockerfile
+++ b/docker-prod/eddist/Dockerfile
@@ -6,7 +6,7 @@ COPY ./eddist-server/client/dist ./dist
 ENV RUST_ENV=prod
 # for debugging
 ENV RUST_LOG=debug
-ENV RUST_BACKTRACE=1
+ENV RUST_BACKTRACE=verbose
 EXPOSE 8080
 
 ENTRYPOINT [ "./eddist" ]
