--- a/docker-prod/eddist-admin/Dockerfile
+++ b/docker-prod/eddist-admin/Dockerfile
@@ -1,5 +1,7 @@
 FROM debian:bookworm-slim
 
+RUN apt update && apt install -y --no-install-recommends ca-certificates
+
 COPY ./target/release/eddist-admin .
 COPY ./eddist-admin/client/build/client ./dist
 
