--- a/eddist-cron/Cargo.toml
+++ b/eddist-cron/Cargo.toml
@@ -28,3 +28,4 @@ uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
 dotenvy = "0.15.7"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 log = "0.4.22"
+encoding_rs = { version = "0.8.34", features = ["fast-kanji-encode"] }
