--- a/docker-prod/eddist-persistence/Dockerfile
+++ b/docker-prod/eddist-persistence/Dockerfile
@@ -1,5 +1,7 @@
 FROM debian:bookworm-slim
 
+RUN apt update && apt install -y --no-install-recommends ca-certificates libc6
+
 COPY ./target/release/eddist-persistence .
 
 ENV RUST_ENV=prod
