--- a/docker-prod/eddist/Dockerfile
+++ b/docker-prod/eddist/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:bookworm-slim
 
-RUN apt update && apt install -y --no-install-recommends ca-certificates
+RUN apt update && apt install -y --no-install-recommends ca-certificates libc6
 
 COPY ./target/release/eddist .
 COPY ./eddist-server/client/dist ./dist
