--- a/eddist-cron/Cargo.toml
+++ b/eddist-cron/Cargo.toml
@@ -29,3 +29,4 @@ dotenvy = "0.15.7"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 log = "0.4.22"
 encoding_rs = { version = "0.8.34", features = ["fast-kanji-encode"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
