--- a/docker-dev/docker-compose.yaml
+++ b/docker-dev/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - mysql_data:/var/lib/mysql
 
   redis:
-    image: redis:6.2
+    image: valkey/valkey:8.0
     container_name: redis_container
     ports:
       - "6379:6379"
@@ -31,16 +31,6 @@ services:
       - "8082:80"
     depends_on:
       - mysql
-
-  keycloak:
-    image: quay.io/keycloak/keycloak
-    container_name: keycloak_container
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    ports:
-      - "8087:8080"
-    command: ["start-dev"]
 
 volumes:
   mysql_data:
