--- a/eddist-admin/client/package.json
+++ b/eddist-admin/client/package.json
@@ -26,6 +26,7 @@
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.2",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
