--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -59,6 +59,7 @@ reqwest = { version = "0.12.5", default-features = false, features = [
 ] }
 eddist-core = { path = "../eddist-core" }
 sha3 = "0.10.8"
+sha2 = "0.10.8"
 jwt-simple = "0.12.9"
 futures = "0.3.30"
 handlebars = "6.1.0"
