--- a/eddist-core/Cargo.toml
+++ b/eddist-core/Cargo.toml
@@ -13,3 +13,6 @@ serde_json = { version = "1.0.118" }
 uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
 encoding_rs = "0.8.34"
 sha3 = "0.10.8"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+metrics = "0.23.0"
