--- a/.docker-compose.env
+++ b/.docker-compose.env
@@ -10,6 +10,12 @@ DOMAIN=localhost
 CONTACT_POINT=<your contact point text such as email address>
 
 RESTRICT_THREAD_CREATION_ON_NO_TINKER=false # plan to deprecate
+AXUM_METRICS=true # Expose axum metrics
+
+# If it is true, you need to encrypt client_secret using symmetric encrption to use user registration system
+# Symmetric algorithm is chacha20poly1305, and nonce is zero, aad is empty, key is tinker_secret (first 32 bit)
+# If enable, client_secret is must be encrypted and encoded base64
+CLIENT_SECRET_SYMMETRIC_ENCRYPTION=false
 
 # for eddist-admin
 # Auth0 (We are only supporting Auth0 for autheticating admin user of eddist-admin)
