WIP: Refactoring around templates

--- a/docker-prod/eddist/Dockerfile
+++ b/docker-prod/eddist/Dockerfile
@@ -4,6 +4,7 @@ RUN apt update && apt install -y --no-install-recommends ca-certificates libc6
 
 COPY ./target/release/eddist .
 COPY ./eddist-server/client/dist ./dist
+COPY ./eddist-server/resources ./resources
 
 ENV RUST_ENV=prod
 ENV RUST_LOG=info
