Enhance URL extraction in Res struct and add CatchPanicLayer to main service

--- a/eddist-server/Cargo.toml
+++ b/eddist-server/Cargo.toml
@@ -47,6 +47,7 @@ tower-http = { version = "0.5.2", features = [
     "timeout",
     "fs",
     "normalize-path",
+    "catch-panic",
 ] }
 tracing = "0.1.40"
 uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
