--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,3 +92,10 @@ jobs:
       - name: Create GitHub release
         run: |
           gh release create ${{ github.ref_name }} --generate-notes
+      - name: Notify Discord
+        uses: tsickert/discord-webhook@b217a69502f52803de774ded2b1ab7c282e99645
+        with:
+          webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          content: |
+            **New Release Published!** 🚀
+            [Release eddist ${{ github.ref_name }}](https://github.com/edginer/eddist/releases/tag/${{ github.ref_name }})
