Add GH_TOKEN environment variable for GitHub release creation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,8 @@ jobs:
           tags: |
             ghcr.io/edginer/eddist-persistence:${{ env.VERSION }}
       - name: Create GitHub release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh release create ${{ github.ref_name }} --generate-notes
       - name: Notify Discord
