Update dependencies across multiple crates
- Upgraded `syn` from version 2.0.79 to 2.0.101 in `Cargo.lock`.
- Updated `thiserror` to version 1.0.64 in `Cargo.lock` and added a new version 2.0.12.
- Bumped `aws-lc-rs` from 1.9.0 to 1.13.0 and `aws-lc-sys` from 0.21.2 to 0.28.2 in `Cargo.lock`.
- Updated `bindgen` from 0.69.4 to 0.69.5 in `Cargo.lock`.
- Updated `rustls` from 0.23.13 to 0.23.26 in `Cargo.lock`.
- Updated `oauth2` from 4.4.2 to 5.0.0 in `Cargo.toml` and adjusted its usage in the code.
- Updated `sqlx` from 0.8.0 to 0.8.5 in multiple `Cargo.toml` files.
- Refactored `auth.rs` to use a static HTTP client for OAuth2 requests.
- Adjusted the `BasicClient` initialization in `main.rs` to use the new OAuth2 client structure.

--- a/eddist-admin/Cargo.toml
+++ b/eddist-admin/Cargo.toml
@@ -11,7 +11,7 @@ chrono = "0.4.38"
 dotenvy = "0.15.7"
 log = "0.4.22"
 tower-sessions = "0.12.2"
-sqlx = { version = "0.8.0", default-features = false, features = [
+sqlx = { version = "0.8.5", default-features = false, features = [
     "runtime-tokio",
     "tls-rustls",
     "mysql",
@@ -24,7 +24,7 @@ tokio = { version = "1.39.2", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["fs", "trace", "normalize-path"] }
 tracing = "0.1.40"
 uuid = { version = "1.10.0", features = ["v7", "v4"] }
-oauth2 = "4.4.2"
+oauth2 = { version = "5.0.0", features = ["reqwest"] }
 reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
