--- a/eddist-admin/client/package.json
+++ b/eddist-admin/client/package.json
@@ -4,17 +4,17 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "build": "react-router build",
+    "dev": "react-router dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@remix-run/node": "^2.11.2",
-    "@remix-run/react": "^2.11.2",
-    "@remix-run/serve": "^2.11.2",
+    "@react-router/fs-routes": "^7.5.3",
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
     "@tanstack/react-query": "^5.52.2",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.1",
@@ -23,13 +23,14 @@
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-router": "^7.0.0",
     "react-select": "^5.8.2",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.11.2",
+    "@react-router/dev": "^7.0.0",
     "autoprefixer": "^10.4.19",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
