--- a/docker-dev/docker-compose.yaml
+++ b/docker-dev/docker-compose.yaml
@@ -29,6 +29,14 @@ services:
       - "8082:80"
     depends_on:
       - mysql
-
+  nginx:
+    image: nginx:latest
+    container_name: nginx_container
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    extra_hosts:
+      - "host.docker.internal:${LINUX_HOST_IP}"
 volumes:
   mysql_data:
