--- a/eddist-server/client/package.json
+++ b/eddist-server/client/package.json
@@ -11,6 +11,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
     "@tanstack/react-query": "^5.52.2",
     "encoding-japanese": "^2.2.0",
     "flowbite-react": "^0.10.1",
@@ -20,6 +22,7 @@
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.0.0",
     "@types/encoding-japanese": "^2.2.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
