Enhance thread view and some refactoring

--- a/docker-dev/nginx.conf
+++ b/docker-dev/nginx.conf
@@ -40,6 +40,11 @@ http {
             proxy_pass http://host.docker.internal:5173/;
         }
 
+        # Well-know path (appspecific/com.chrome.devtools.json)
+        location = /.well-known/appspecific/com.chrome.devtools.json {
+            proxy_pass http://host.docker.internal:5173;
+        }
+
         # location ~ "^(/[a-z0-9\-_]{1,63}/\d{10}/?.*|/[a-z0-9\-_]/?)$" {
         #     proxy_pass http://host.docker.internal:5173;
 
@@ -63,6 +68,5 @@ http {
         location / {
             proxy_pass http://host.docker.internal:5173;
         }
-
     }
 }
