--- a/docker-prod/eddist-client/Dockerfile
+++ b/docker-prod/eddist-client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:22-bookworm-slim
+FROM --platform=amd64 node:22-bookworm-slim
 
 # Setup pnpm using Corepack
 ENV PMPM_HOME="/pnpm"
@@ -6,6 +6,7 @@ ENV PATH="${PMPM_HOME}:${PATH}"
 RUN corepack enable
 
 COPY pnpm-lock.yaml pnpm-workspace.yaml package.json /app/
+COPY eddist-server/client-v2/server.js /app/eddist-server/client-v2/
 COPY eddist-server/client-v2/package.json /app/eddist-server/client-v2/
 COPY node_modules /app/
 COPY eddist-server/client-v2/node_modules /app/eddist-server/client-v2/
