--- a/eddist-server/client-v2/.env.local
+++ b/eddist-server/client-v2/.env.local
@@ -1,2 +1,1 @@
-VITE_SSR_BASE_URL=http://localhost:8000
-VITE_EDDIST_SERVER_URL=http://localhost:8080
+VITE_EDDIST_SERVER_URL=http://host.docker.internal:8080
