--- a/eddist-server/client-v2/package.json
+++ b/eddist-server/client-v2/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "node server.js",
     "typecheck": "react-router typegen && tsc",
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@react-router/express": "^7.6.0",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@tailwindcss/postcss": "^4.1.5",
+    "compression": "^1.8.0",
     "encoding-japanese": "^2.2.0",
+    "express": "^5.1.0",
     "flowbite-react": "^0.11.7",
     "isbot": "^5.1.27",
+    "morgan": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.3.0",
@@ -28,6 +32,7 @@
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
     "@types/encoding-japanese": "^2.2.1",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.15.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
