--- a/docker-dev/docker-compose.yaml
+++ b/docker-dev/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
       - "8000:8000"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-    # extra_hosts:
-    #   - "host.docker.internal:${LINUX_HOST_IP}"
+    extra_hosts:
+      - "host.docker.internal:${LINUX_HOST_IP}"
 volumes:
   mysql_data:
