--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -8,12 +8,13 @@ permissions:
   contents: read
   packages: write
   checks: write
+  members: read
 
 jobs:
   trigger-check:
     if: |
       github.event.comment.body == '/deploy beta' &&
-      startsWith(github.event.issue.pull_request.html_url, 'https://')
+      github.event.issue.pull_request != null
     runs-on: ubuntu-22.04
     outputs:
       allowed: ${{ steps.team-check.outputs.is_member }}
@@ -23,7 +24,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const org = context.repo.owner;
+            const org = 'project-eddist';
             const team_slug = 'beta-deployer';
             const username = context.payload.comment.user.login;
             try {
