--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -64,6 +64,7 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           run_install: false
+          version: "latest"
 
       - name: Setup Node.js & cache
         uses: actions/setup-node@v4
