--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -48,6 +48,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        id: checkout
         with:
           ref: refs/pull/${{ github.event.issue.number }}/head
 
@@ -112,7 +113,7 @@ jobs:
           file: docker-prod/eddist/Dockerfile
           push: true
           tags: |
-            ghcr.io/edginer/eddist:${{ github.sha }}
+            ghcr.io/edginer/eddist:${{ steps.checkout.outputs.sha }}
             ghcr.io/edginer/eddist:beta
 
       - name: Build & Push eddist-client
@@ -122,7 +123,7 @@ jobs:
           file: docker-prod/eddist-client/Dockerfile
           push: true
           tags: |
-            ghcr.io/edginer/eddist-client:${{ github.sha }}
+            ghcr.io/edginer/eddist-client:${{ steps.checkout.outputs.sha }}
             ghcr.io/edginer/eddist-client:beta
 
       - name: Build & Push eddist-admin
@@ -132,7 +133,7 @@ jobs:
           file: docker-prod/eddist-admin/Dockerfile
           push: true
           tags: |
-            ghcr.io/edginer/eddist-admin:${{ github.sha }}
+            ghcr.io/edginer/eddist-admin:${{ steps.checkout.outputs.sha }}
             ghcr.io/edginer/eddist-admin:beta
 
       - name: Build & Push eddist-cron
@@ -142,7 +143,7 @@ jobs:
           file: docker-prod/eddist-cron/Dockerfile
           push: true
           tags: |
-            ghcr.io/edginer/eddist-cron:${{ github.sha }}
+            ghcr.io/edginer/eddist-cron:${{ steps.checkout.outputs.sha }}
             ghcr.io/edginer/eddist-cron:beta
 
       - name: Build & Push eddist-persistence
@@ -152,7 +153,7 @@ jobs:
           file: docker-prod/eddist-persistence/Dockerfile
           push: true
           tags: |
-            ghcr.io/edginer/eddist-persistence:${{ github.sha }}
+            ghcr.io/edginer/eddist-persistence:${{ steps.checkout.outputs.sha }}
             ghcr.io/edginer/eddist-persistence:beta
 
       - name: Dispatch to Beta Repo
@@ -161,7 +162,7 @@ jobs:
           token: ${{ secrets.DEPLOY_REPO_PAT }}
           repository: ${{ secrets.DEPLOY_REPO_URL2 }}
           event-type: update-image-beta
-          client-payload: '{"image-tag":"${{ github.sha }}"}'
+          client-payload: '{"image-tag":"${{ steps.checkout.outputs.sha }}"}'
       - name: Comment success
         uses: peter-evans/create-or-update-comment@v3
         with:
@@ -169,7 +170,7 @@ jobs:
           issue-number: ${{ github.event.issue.number }}
           body: >
             ✅ Beta deployment triggered successfully for @${{ github.event.comment.user.login }}!  
-            Images built with tag `${{ github.sha }}` and dispatched for update-image-beta.
+            Images built with tag `${{ steps.checkout.outputs.sha }}` and dispatched for update-image-beta.
 
   deny:
     needs: trigger-check
