--- a/eddist-core/Cargo.toml
+++ b/eddist-core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.205", features = ["derive"] }
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 # TODO: Remove this dependency and replace it with trait
 redis = { version = "0.30.0", features = ["tokio-comp"] }
 anyhow = "1.0.86"
@@ -16,3 +16,5 @@ sha3 = "0.10.8"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 metrics = "0.24.2"
+thiserror = "1.0"
+wirefilter = { git = "https://github.com/cloudflare/wirefilter", rev = "b4cc65907b188427db1abd18490674a367df13e9", package = "wirefilter-engine" }
